criado modelos de usuario e perguntas no servidor

--- a/Angular/microblog/src/app/timeline/timeline.component.html
+++ b/Angular/microblog/src/app/timeline/timeline.component.html
@@ -19,7 +19,7 @@
       </div>
       
       <ul class="col s7 offset-s1 list_posts">
-          <li class="item_post" *ngFor="let p of posts">
+          <li class="item_post" *ngFor="let p of perguntas">
               <small>
                   Em {{p.data | date: 'dd/MM/yyyy'}} às
                   {{p.data | date: 'HH:mm'}}
