--- a/Angular/microblog/src/app/login/login.component.html
+++ b/Angular/microblog/src/app/login/login.component.html
@@ -13,10 +13,12 @@
                     <div class="input-field col s12">
                         <input type="text" name="login" id="login" [(ngModel)]="usuario.login"/>
                         <label for="login">Login</label>
+                        <!--<small class="red-text" *ngIf="login.invalid && login.touched">Inserir login</small>-->
                     </div>
                     <div class="input-field col s12">
                         <input type="password" name="senha" id="senha" [(ngModel)]="usuario.senha"/>
                         <label for="senha">Senha</label>
+                        <!--<small class="red-text" *ngIf="senha.invalid && senha.touched">Inserir login</small>-->
                     </div>
                 </form>
             </div>
