inicio da criacao das telas

--- a/Angular/microblog/src/app/home/home.component.html
+++ b/Angular/microblog/src/app/home/home.component.html
@@ -1,8 +1,17 @@
 <nav>
     <div class="nav-wrapper grey darken-3">
         <div class="container">
-            <div class="brand-logo">Microblog</div>
+            <div class="brand-logo">pergunte.me</div>
             <ul class="right">
+                <li>
+                    <a href="/home/inbox">Inbox</a>
+                </li>
+                <li>
+                    <a href="/perfil">Meu perfil</a>
+                </li>
+                <li>
+                    <a href="/pergunta">Minhas perguntas</a>
+                </li>
                 <li>
                     <a href="!#">Logout</a>
                 </li>
