criada tela de perguntas respondidas pelo usuario

--- a/Angular/microblog/src/app/home/home.component.html
+++ b/Angular/microblog/src/app/home/home.component.html
@@ -7,7 +7,7 @@
                     <a href="/home/inbox">Inbox</a>
                 </li>
                 <li>
-                    <a href="/perfil">Meu perfil</a>
+                    <a href="/profile">Meu perfil</a>
                 </li>
                 <li>
                     <a href="/pergunta">Minhas perguntas</a>
