--- a/Angular/microblog/src/app/timeline/timeline.component.html
+++ b/Angular/microblog/src/app/timeline/timeline.component.html
@@ -1,33 +1,30 @@
+<app-home></app-home>
 <div class="container" style="margin-top: 20px;">
-  <div class="row">
-      <div class="col s3">
-          <div class="col s12 col_profile">
-              <h5>{{usuario.nome}}</h5>
-              <p>
-                  {{usuario.bio}}
-              </p>
-          </div>
-          <form class="col s12">
-              <div class="input-field">
-                  <textarea name="post" id="post" class="materialize-textarea" [(ngModel)]="post.conteudo"></textarea>
-                  <label for="post">Escreva alguma coisa</label>
-              </div>
-              <div class="input-field">
-                  <button class="btn waves-effect waves-light col s12 grey darken-3" (click) = "salvar()">Enviar</button>
-              </div>
-          </form>
-      </div>
-      
-      <ul class="col s7 offset-s1 list_posts">
-          <li class="item_post" *ngFor="let p of perguntas">
-              <small>
-                  Em {{p.data | date: 'dd/MM/yyyy'}} às
-                  {{p.data | date: 'HH:mm'}}
-              </small>
-              <p>
-                  {{p.conteudo}}               
-              </p>
-          </li>
-      </ul>
-  </div>
+    <div class="row">
+        <div class="col s3">
+            <div class="col s12 col_profile">
+                <p style="text-align: center">@{{usuario.nome}}</p>
+                <p style="text-align: center">{{usuario.nome}}</p>
+                <p style="text-align: center">{{usuario.bio}}</p>
+            </div>
+        </div>
+        <ul class="col s7 offset-s1 list_posts" >
+            <li class="item_post" *ngFor="let p of perguntas">
+                    <div class="valign z-depth-1 form_login">
+                <small>
+                    Em {{p.dataPergunta | date: 'dd/MM/yyyy'}}
+                </small>
+                <p>
+                    <font color="blue">{{p.descricao}}</font>
+                </p>
+                <small>
+                    Em {{p.dataResposta | date: 'dd/MM/yyyy'}} às {{p.data | date: 'HH:mm'}}
+                </small>
+                <p>
+                    {{p.resposta}}
+                </p>
+                </div>
+            </li>
+        </ul>
+    </div>
 </div>
