Criada função para ignorar perguntas

--- a/Angular/microblog/src/app/inbox/inbox.component.html
+++ b/Angular/microblog/src/app/inbox/inbox.component.html
@@ -16,7 +16,7 @@
               (click)="responder()">Responder</button>
           </div>
           <div class="col s2">
-            <button class="btn waves-effect waves-light grey lighten-3 grey-text text-darken-1" style="width: 100%" (click)="ignorar()">Ignorar</button>
+            <button class="btn waves-effect waves-light grey lighten-3 grey-text text-darken-1" style="width: 100%" (click)="ignorar(p._id)">Ignorar</button>
           </div>
         </div>
       </li>
