criadas rotas para todas as telas

--- a/Angular/microblog/src/app/home/home.component.html
+++ b/Angular/microblog/src/app/home/home.component.html
@@ -10,7 +10,10 @@
                     <a href="/profile">Meu perfil</a>
                 </li>
                 <li>
-                    <a href="/pergunta">Minhas perguntas</a>
+                    <a href="/editarperfil">Editar perfil</a>
+                </li>
+                <li>
+                    <a href="/perguntas">Minhas perguntas</a>
                 </li>
                 <li>
                     <a href="!#">Logout</a>
