inserido o logout do usuario do sistema

--- a/Angular/microblog/src/app/home/home.component.html
+++ b/Angular/microblog/src/app/home/home.component.html
@@ -16,7 +16,7 @@
                     <a href="/perguntas">Minhas perguntas</a>
                 </li>
                 <li>
-                    <a href="!#">Logout</a>
+                    <a href="" (click)="sair()">Logout</a>
                 </li>
             </ul>
         </div>
