--- a/Angular/microblog/src/app/inbox/inbox.component.html
+++ b/Angular/microblog/src/app/inbox/inbox.component.html
@@ -13,7 +13,7 @@
         <div class="row" style="text-align : right">
           <div class="col s2">
             <button class="btn  waves-effect waves-light grey darken-3" style="width: 100%" 
-              (click)="responder()">Responder</button>
+              (click)="responder(p)">Responder</button>
           </div>
           <div class="col s2">
             <button class="btn waves-effect waves-light grey lighten-3 grey-text text-darken-1" style="width: 100%" (click)="ignorar(p._id)">Ignorar</button>
