--- a/Angular/microblog/src/app/responder/responder.component.html
+++ b/Angular/microblog/src/app/responder/responder.component.html
@@ -1,4 +1,30 @@
 <app-home></app-home>
-<p>
-  responder works!
-</p>
+<div class="container" style="margin-top: 20px;">
+  <div class="row">
+    <div class="col s12">
+      <div class="col s12 col_profile">
+        <small>
+          Em {{pergunta.dataPergunta | date: 'dd/MM/yyyy'}} às
+          {{pergunta.dataPergunta | date: 'HH:mm'}},
+          @{{pergunta.remetente}} perguntou:
+      </small>
+        <p>
+          {{pergunta.descricao}}
+        </p>
+      </div>
+      <form class="col s12">
+        <div class="input-field">
+          <textarea name="post" id="post" class="materialize-textarea" ></textarea>
+          <label for="post">Resposta</label>
+        </div>
+        <div class="col s2">
+          <button class="btn  waves-effect waves-light grey darken-3" style="width: 100%" 
+            (click)="responder(pergunta)">Enviar</button>
+        </div>
+        <div class="col s2">
+          <button class="btn waves-effect waves-light grey lighten-3 grey-text text-darken-1" style="width: 100%" (click)="cancelar()">Cancelar</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
