--- a/Angular/microblog/src/app/inbox/inbox.component.html
+++ b/Angular/microblog/src/app/inbox/inbox.component.html
@@ -5,7 +5,7 @@
         <small>
             Em {{p.dataPergunta | date: 'dd/MM/yyyy'}} às
             {{p.dataPergunta | date: 'HH:mm'}},
-            @{{p.remetente}} perguntou:
+            {{p.remetente.nome}} perguntou:
         </small>
         <p>
           {{p.descricao}}
