--- a/Angular/microblog/src/app/pergunta/pergunta.component.html
+++ b/Angular/microblog/src/app/pergunta/pergunta.component.html
@@ -1,4 +1,38 @@
 <app-home></app-home>
-<p>
-  pergunta works!
-</p>
+<div class="container" style="margin-top: 20px;">
+  <div class="row">
+      <div class="col s3">
+          <form class="col s12">
+              <div class="input-field">
+                  <textarea name="post" id="post" class="materialize-textarea" ></textarea>
+                  <label for="post">Perguntar para</label>
+              </div>
+              <div class="input-field">
+                <textarea name="post" id="post" class="materialize-textarea" ></textarea>
+                <label for="post">Faça sua pergunta</label>
+            </div>
+              <div class="input-field">
+                  <button class="btn waves-effect waves-light col s12 grey darken-3" (click) = "salvar()">Perguntar</button>
+              </div>
+          </form>
+      </div>
+      
+      <ul class="col s7 offset-s1 list_posts">
+          <li class="item_post" *ngFor="let p of perguntas">
+              <small>
+                  Em {{p.dataPergunta | date: 'dd/MM/yyyy'}} às
+                  {{p.dataPergunta | date: 'HH:mm'}} eu perguntei para {{p.remetente.nome}}
+              </small>
+              <p>
+                  {{p.descricao}}               
+              </p>
+              <small>
+                Respota(em {{p.dataResposta | date: 'dd/MM/yyyy'}}) às {{p.dataResposta | date: 'HH:mm'}}
+            </small>
+            <p>
+                {{p.resposta}}               
+            </p>
+          </li>
+      </ul>
+  </div>
+</div>
