--- a/Angular/microblog/src/app/responder/responder.component.html
+++ b/Angular/microblog/src/app/responder/responder.component.html
@@ -6,7 +6,7 @@
         <small>
           Em {{pergunta.dataPergunta | date: 'dd/MM/yyyy'}} às
           {{pergunta.dataPergunta | date: 'HH:mm'}},
-          @{{pergunta.remetente.nome}} perguntou:
+          @{{pergunta.remetente.login}} perguntou:
       </small>
         <p>
           {{pergunta.descricao}}
