--- a/Angular/microblog/src/app/pergunta/pergunta.component.html
+++ b/Angular/microblog/src/app/pergunta/pergunta.component.html
@@ -1,38 +1,41 @@
 <app-home></app-home>
 <div class="container" style="margin-top: 20px;">
   <div class="row">
-      <div class="col s3">
-          <form class="col s12">
-              <div class="input-field">
-                  <textarea name="post" id="post" class="materialize-textarea" ></textarea>
-                  <label for="post">Perguntar para</label>
-              </div>
-              <div class="input-field">
-                <textarea name="post" id="post" class="materialize-textarea" ></textarea>
-                <label for="post">Faça sua pergunta</label>
-            </div>
-              <div class="input-field">
-                  <button class="btn waves-effect waves-light col s12 grey darken-3" (click) = "salvar()">Perguntar</button>
-              </div>
-          </form>
-      </div>
-      
-      <ul class="col s7 offset-s1 list_posts">
-          <li class="item_post" *ngFor="let p of perguntas">
-              <small>
-                  Em {{p.dataPergunta | date: 'dd/MM/yyyy'}} às
-                  {{p.dataPergunta | date: 'HH:mm'}} eu perguntei para {{p.remetente.nome}}
-              </small>
-              <p>
-                  {{p.descricao}}               
-              </p>
-              <small>
-                Respota(em {{p.dataResposta | date: 'dd/MM/yyyy'}}) às {{p.dataResposta | date: 'HH:mm'}}
-            </small>
-            <p>
-                {{p.resposta}}               
-            </p>
-          </li>
-      </ul>
+    <div class="col s3">
+      <form class="col s12">
+          <label for="perg">Usuario</label>
+          <select class="browser-default" [(ngModel)]="pergunta.remetente" name="remetente">
+              <option *ngFor="let u of usuarios" value="{{u._id}}">
+                  {{u.login}}
+              </option>
+          </select>
+        <div class="input-field">
+          <textarea name="perg" id="perg" class="materialize-textarea" [(ngModel)]="pergunta.descricao"></textarea>
+          <label for="perg">Faça sua pergunta</label>
+        </div>
+        <div class="input-field">
+          <button class="btn waves-effect waves-light col s12 grey darken-3" (click)="perguntar()">Perguntar</button>
+        </div>
+      </form>
+    </div>
+
+    <ul class="col s7 offset-s1 list_perguntas">
+      <li class="item_post" *ngFor="let p of perguntas">
+        <div class="valign z-depth-1 form_login">
+          <small>
+            Em {{p.dataPergunta | date: 'dd/MM/yyyy'}} às {{p.dataPergunta | date: 'HH:mm'}} eu perguntei para {{p.remetente.login}}
+          </small>
+          <p>
+            {{p.descricao}}
+          </p>
+          <small>
+            Respota(em {{p.dataResposta | date: 'dd/MM/yyyy'}}) às {{p.dataResposta | date: 'HH:mm'}}
+          </small>
+          <p>
+            {{p.resposta}}
+          </p>
+        </div>
+      </li>
+    </ul>
   </div>
 </div>
